--- a/02_css/02-css_practice_03.css
+++ b/02_css/02-css_practice_03.css
@@ -34,3 +34,45 @@
 #box div:nth-child(3) {
   background-color: red;
 }
+
+.border {
+  width: 100px;
+  height: 200px;
+  border-width: 1px 2px 3px 4px;
+  border-style: solid dashed dotted;
+  border-color: red violet black blue;
+  border-top: 1px solid red;
+  border-radius: 5px 10px 0px 5vw;
+}
+
+.contentbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: content-box;
+  width: 100px;
+  height: 100px;
+  padding: 20px;
+  border: 15px solid red;
+  background-color: orange;
+}
+
+.borderbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  width: 100px;
+  height: 100px;
+  padding: 20px;
+  border: 15px solid red;
+  background-color: orange;
+}
+.display {
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
+}
+.display:hover {
+  background-color: rgba(0, 0, 0, 0);
+}
