코딩온 30일차

--- a/10_form/views/index.ejs
+++ b/10_form/views/index.ejs
@@ -21,14 +21,63 @@
     <h2>POST 요청</h2>
     <form action="/login" method="post">
       <label for="id">ID</label>
-      <input type="text" name="id" id="id" />
+      <input
+        type="text"
+        name="id"
+        id="id"
+        required
+        placeholder="ID"
+        pattern="^([a-zA-Z0-9가-힣]{4,})"
+        title="아이디는 대소문자, 한글, 숫자로 구성된 4글자 이상의 문자여야 합니다."
+      />
 
       <label for="pw">PW</label>
-      <input type="password" name="pw" id="pw" />
+      <input
+        type="password"
+        name="pw"
+        id="pw"
+        required
+        placeholder="PW"
+        pattern="([a-z0-9]{8,12})"
+        title="비밀번호는 영어 소문자와 숫자로 구성된 8~12자리 문자여야 합니다."
+      />
 
       <input type="text" name="email" id="email" />
       <input type="number" name="grade" />
+
       <button>제출</button>
     </form>
+    <hr />
+    <!-- js form validation -->
+    <form
+      action="/js-form-check"
+      method="post"
+      onsubmit="return checkForm(this)"
+    >
+      <input
+        type="text"
+        name="id"
+        placeholder="ID"
+        minlength="4"
+        titla="최소 4글자"
+      />
+      <span>우편물 수령장소</span>
+      <input type="checkbox" name="post" value="자택" />
+      <input type="checkbox" name="post" value="회사" />
+      <button>제출</button>
+    </form>
+    <script>
+      function checkForm(form) {
+        if (form.id.value == "") {
+          form.id.focus();
+          alert("아이디를 입력해주세요");
+          return false;
+        }
+        if (form.post[0].checked == false && form.post[1].checked == false) {
+          alert("우편물 수령 장소를 선택해주세요");
+          return false;
+        }
+      }
+    </script>
   </body>
 </html>
