--- a/21-enc-prac/views/login.ejs
+++ b/21-enc-prac/views/login.ejs
@@ -26,6 +26,15 @@
               pw: document.querySelector("#pw").value,
             },
           });
+          console.log(data);
+          if (data.result) {
+            document.location.href = "/";
+          } else {
+            const div = document.createElement("div");
+            document.querySelector("body").append(div);
+            div.innerText = data.message;
+            div.style.color = "red";
+          }
         } catch (error) {
           console.log(error);
         }
