--- a/21-enc-prac/views/index.ejs
+++ b/21-enc-prac/views/index.ejs
@@ -5,8 +5,11 @@
     <h1>회원가입, 로그인, 회원정보수정 실습 (with. 세션)</h1>
 
     <!-- TODO: 세션 유무(back에서 data 키값으로 던지고 있음)-->
-    <p>ㅇㅇㅇ님 환영합니다.</p>
+    <% if (data) { %>
+    <p><%= data.name %>님 환영합니다.</p>
+    <% } else { %>
     <p>아직 로그인을 하지 않으셨군요.</p>
+    <% } %>
 
     <br />
     <a href="/register">회원가입</a>
